--- a/css/style.css
+++ b/css/style.css
@@ -47,13 +47,37 @@ html, body {
 }
 
 #list-search {
-  background-color: green;
+  /*background-color: green;*/
 }
 
 #address-input {
   /*width: 100%;*/
   background: url(../img/search-button-transparent.png) no-repeat scroll 0px 0px;
   padding-left: 30px;
+}
+
+.close {
+  position: absolute;
+  right: 25px;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  padding: 2px;
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 18px;
+  color: #000000;
+  text-shadow: 0 1px 0 #ffffff;
+  opacity: 0.2;
+  filter: alpha(opacity=20);
+  text-decoration: none;
+}
+.close:hover {
+  color: #000000;
+  text-decoration: none;
+  opacity: 0.4;
+  filter: alpha(opacity=40);
+  cursor: pointer;
 }
 
 .close-icon {
@@ -87,23 +111,9 @@ html, body {
   cursor: pointer;
 }
 
-#address-input:not(:valid) ~ .close-icon {
+#address-input:not(:valid) ~ .close {
 	display: none;
 }
-
-/*.submit-form {
-  position: absolute;
-  top: 0px;
-}*/
-
-/*#submit-form {
-  margin-left: 10px;
-  margin-right: 0px;
-  cursor: default;
-  display: inline-block;
-  width: 25px;
-  height: 25px;
-}*/
 
 .offscreen {
   border: 0;
@@ -115,55 +125,9 @@ html, body {
   position: absolute;
   width: 1px;
 }
-}
-
-#map-view {
-  background-color: blue;
-}
 
 #map {
   width: 100%;
   height: 100%;
   /*height: 100%;*/
-}
-
-/*@media screen and (max-width: 992px) {
-  #list-view {
-    display: none;
-  }
-}*/
-
-.side-view {
-  top: 0px;
-  display: block;
-  width: 0px;
-  overflow: hidden;
-  transition: all 0.2s linear 0s;
-  float: left;
-  position: relative;
-  /*background-color: rgba(0, 0, 0, 1.00);*/
-  height: 1vh;
-  overflow-y: auto;
-  z-index: 1000;
-
-}
-
-.side-view.active {
-    display: block;
-    width: 300px;
-    z-index: 99;
-    padding-top: 0px;
-    height: 100vh;
-}
-
-.logo {
-  position: absolute;
-  top: 10px;
-  left: 25px;
-}
-
-.hideSideView {
-  position: absolute;
-  top: 10px;
-  right: 25px;
 }
